# jagent

./: .vscode.backup.json  pyproject.toml  test.py
app/: config.py  main.py
app/agents/: graph.py  state.py
app/agents/nodes/: draft_email.py  find_contact.py  score_fit.py
app/agents/nodes/score_fit/: score_fit.py  score_prompt.py  score_schema.py
app/api/: schemas.py
app/core/: llm_client.py
app/core/contact_providers/: apollo.py  base.py  hunter.py  prospeo.py  router.py
