[project]
name = "jagent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "crawl4ai>=0.9.0",
    "deepagents>=0.6.12",
    "docling>=2.109.0",
    "fastapi>=0.139.0",
    "langchain-core>=1.4.8",
    "langchain-openai>=1.3.3",
    "langgraph>=1.2.7",
    "linkedin-api>=2.3.1",
    "playwright>=1.61.0",
    "python-dotenv>=1.2.2",
    "sentence-transformers>=5.6.0",
    "streamlit>=1.58.0",
    "tavily-python>=0.7.26",
    "tweepy>=4.17.0",
    "weasyprint>=69.0",
]
